fix: Change button background colors on game pages to improve contrast ratio for accessibility

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -332,7 +332,7 @@ footer p {
 
 #shapes-modal-button {
     
-    background-color:  rgb(49 141 35);
+    background-color:  rgb(39 95 31);
     background-image: url(../images/background_carbon.webp);
     color: white;
     padding: 20px;
@@ -455,7 +455,7 @@ footer p {
 }
 
 #question-button {
-    background-color:  red;
+    background-color:  #d53737;
     background-image: url(../images/background_carbon.webp);
     color: white;
     padding-left: 30px;
@@ -556,7 +556,7 @@ footer p {
 }
 
 #congrats-button {
-    background-color:  red;
+    background-color:  #d53737;
     background-image: url(../images/background_carbon.webp);
     color: white;
     padding: 20px;
@@ -613,7 +613,7 @@ footer p {
 }
 
 #back-button {
-    background-color:  orangered;
+    background-color:  #d53737;
     background-image: url(../images/background_carbon.webp);
     color: white;
     padding: 20px;
@@ -631,7 +631,7 @@ footer p {
 }
 
 #end-test-button {
-    background-color:  red;
+    background-color:  #d53737;
     background-image: url(../images/background_carbon.webp);
     color: white;
     padding: 20px;
